--- a/4e/Transformations du plan.html
+++ b/4e/Transformations du plan.html
@@ -5,12 +5,13 @@
     <body>
     <div style="height: 50px;"></div>
     <p class="soustitre">
-        Niveau 4ème :
+        Niveau 3ème :
     </p>
     <h1><b><u>
-        Transformations du plan
+        Tranformations du plan
     </h1></b></u>
     <ul>Sélectionner la compétences à travailler</ul>
+    <li><a class="button" href="Transformations du plan/Identifier les tranformations du plan.html">Identifier les tranformations du plan</a></li>
     <li>Comprendre les symétries</li>
     <li>Comprendre les translations</li>
     <li>Comprendre les rotations</li>
