--- a/4e/Proportionnalité.html
+++ b/4e/Proportionnalité.html
@@ -11,8 +11,8 @@
         Proportionnalité
     </h1></b></u>
     <ul>Sélectionner la compétences à travailler</ul>
-    <li>Calculer une quatrième proportionnelle</li>
-    <li>Identifier une situation de proportionnalité</li>
+    <li><a class="button" href="Proportionnalité/Calculer une quatrième proportionnelle.html">Calculer une quatrième proportionnelle</a></li>
+    <li><a class="button" href="Proportionnalité/Identifier une situation de proportionnalité.html">Identifier une situation de proportionnalité</a></li>
     <div style="height: 50px;"></div>
     <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
