--- a/4e/Proportionnalité/Identifier une situation de proportionnalité.html
+++ b/4e/Proportionnalité/Identifier une situation de proportionnalité.html
@@ -7,8 +7,9 @@
 
         function Valider() {
             var nbr1 = document.getElementById("oui").checked;
+            var nbr2 = document.getElementById("non").checked;
             document.getElementById("Sol").innerHTML = "";
-            if (values[4] == nbr1)
+            if (values[6] == nbr1 && (nbr1 || nbr2))
                 document.getElementById("Sol").innerHTML = "Bravo c'est correct";
             else {
                 document.getElementById("Sol").innerHTML = "C'est incorrect";
@@ -29,6 +30,8 @@
             document.getElementById("denominateur").innerHTML = values[1].toString();
             document.getElementById("numerateur2").innerHTML = values[2].toString();
 			document.getElementById("denominateur2").innerHTML = values[3].toString();
+            document.getElementById("numerateur3").innerHTML = values[4].toString();
+			document.getElementById("denominateur3").innerHTML = values[5].toString();
         }
 
 
@@ -44,22 +47,28 @@
     <p>
         Consigne : Ce tableau est-il un tableau de proportionnalité ?
     </p>
-    <table>
-        <tbody>
+    <table style=" border-collapse: collapse;">
+        <tbody >
             <tr>
                 <td style="text-align: center; border-color: white; border-style: solid;">
-				<div style="padding: 15px;">
-                    <label id="numerateur" >
-                        <script>document.write(values[0])</script>
-                    </label>
-				</div>
+                    <div style="padding: 15px;">
+                        <label id="numerateur" >
+                            <script>document.write(values[0])</script>
+                        </label>
+                    </div>
                 </td>
 				<td style="text-align: center; border-color: white; border-style: solid">
                     <label id="numerateur2">
                         <script>document.write(values[2])</script>
                     </label>
                 </td>
-				<td rowspan="2" width="30"></td>
+                <td style="text-align: center; border-color: white; border-style: solid;">
+                    <div style="padding: 15px;">
+                        <label id="numerateur3" >
+                            <script>document.write(values[4])</script>
+                        </label>
+                    </div>
+                </td>
             </tr>
             <tr>
                 <td style="border-color: white; border-style: solid; text-align: center;">
@@ -68,34 +77,30 @@
                     </label>
                 </td>
                 <td style="border-color: white; border-style: solid; text-align: center;">
-				<div style="padding: 15px;">
-					<label id="denominateur2">
-                        <script>document.write(values[3])</script>
-					</label>
-				</div>
+                    <div style="padding: 15px;">
+                        <label id="denominateur2">
+                            <script>document.write(values[3])</script>
+                        </label>
+                    </div>
+                </td>
+                <td style="border-color: white; border-style: solid; text-align: center;">
+                    <label id="denominateur3">
+                        <script>document.write(values[5])</script>
+                    </label>
                 </td>
             </tr>
-			<tr>
-				<td rowspan="2"> <input type="radio" name="rep" id="oui" /> </td>
-                <td>
-                    <label id="oui" for="oui">Oui</label>
-                </td>
-				<td rowspan="2"> <input type="radio" name="rep" id="non" /> </td>
-                <td>
-                    <label id="non" for="non">Non</label>
-                </td>
-				<td rowspan="2">
-                </td>				
-				<td rowspan="2">
-                    <label id="Sol"></label>
-                </td>
-			</tr>
         </tbody>
     </table>
     <p>
+        <input type="radio" name="rep" id="oui" />
+        <label for="oui">Oui</label>
+        <input type="radio" name="rep" id="non" />
+        <label for="non">Non</label><br>
+    </p>
+    <p>
         <INPUT class="backbutton" TYPE="button" VALUE=" Valider " onclick="Valider()">
         <INPUT class="backbutton" TYPE="button" VALUE=" Annuler " onclick="Annuler()"><br>
-        <label id="correctionGlobal"></label><br>
+        <label id="Sol"></label><br>
     </p>
     <p>
         <INPUT class="backbutton" TYPE="button" VALUE=" Recommencer " onclick="Recommencer()">
