--- a/3e/Notion de fonction.html
+++ b/3e/Notion de fonction.html
@@ -11,7 +11,7 @@
         Notion de fonction
     </h1></b></u>
     <ul>Sélectionner la compétences à travailler</ul>
-    <li>Déterminer l'image d'un nombre</li>
+    <li><a class="button" href="Notion de fonction/Déterminer l'image d'un nombre.html">Déterminer l'image d'un nombre</a></li>
     <li>Déterminer l'antécédent d'un nombre</li>
     <div style="height: 50px;"></div>
     <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
