--- a/3e/Notion de fonction/Déterminer l'image d'un nombre.html
+++ b/3e/Notion de fonction/Déterminer l'image d'un nombre.html
@@ -208,7 +208,7 @@
         Déterminer l'image d'un nombre.
     </h1></b></u>
     <p>
-        Consigne : Completer la phrase ci-dessous en vous aidant de la figure. Attention les noms de points sont à mettrent en majuscule.
+        Consigne : Donner l'image de la valeur indiquée en vous aidant des informations founies (graphique, expression littérale ou tableau de valeurs).
     </p>
     <table>
         <tr >
