--- a/3e/Transformations du plan/Identifier les tranformations du plan.html
+++ b/3e/Transformations du plan/Identifier les tranformations du plan.html
@@ -321,7 +321,7 @@
         Identifier les tranformations du plan.
     </h1></b></u>
     <p>
-        Consigne : Completer la phrase ci-dessous en vous aidant de la figure. Attention les noms de points sont à mettrent en majuscule.
+        Consigne : Completer la phrase ci-dessous en vous aidant de la figure. Attention les noms de points sont à mettre en majuscule.
     </p>
     <canvas id="myCanvas" width="500" height="500" style="color: white;stroke: white; border:1px solid white">
         Your browser does not support the HTML5 canvas tag.
