--- a/4e/Proportionnalité/Identifier une situation de proportionnalité.html
+++ b/4e/Proportionnalité/Identifier une situation de proportionnalité.html
@@ -78,11 +78,11 @@
 			<tr>
 				<td rowspan="2"> <input type="radio" name="rep" id="oui" /> </td>
                 <td>
-                    <label id="oui" for="oui">Oui</label>
+                    <label for="oui">Oui</label>
                 </td>
 				<td rowspan="2"> <input type="radio" name="rep" id="non" /> </td>
                 <td>
-                    <label id="non" for="non">Non</label>
+                    <label for="non">Non</label>
                 </td>
 				<td rowspan="2">
                 </td>				
