Update Transformations du plan

--- a/3e/Notion de fonction.html
+++ b/3e/Notion de fonction.html
@@ -12,7 +12,7 @@
     </h1></b></u>
     <ul>Sélectionner la compétences à travailler</ul>
     <li><a class="button" href="Notion de fonction/Déterminer l'image d'un nombre.html">Déterminer l'image d'un nombre</a></li>
-    <li>Déterminer l'antécédent d'un nombre</li>
+    <li><a class="button" href="Notion de fonction/Déterminer l'antécédent d'un nombre.html">Déterminer l'antécédent d'un nombre</a></li>
     <div style="height: 50px;"></div>
     <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
