--- a/3e/Transformations du plan.html
+++ b/3e/Transformations du plan.html
@@ -12,10 +12,10 @@
     </h1></b></u>
     <ul>Sélectionner la compétences à travailler</ul>
     <li><a class="button" href="Transformations du plan/Identifier les tranformations du plan.html">Identifier les tranformations du plan</a></li>
-    <li>Comprendre les symétries</li>
-    <li>Comprendre les translations</li>
-    <li>Comprendre les rotations</li>
-    <li>Comprendre les homothéties</li>
+    <li><a class="button" href="Transformations du plan/Comprendre les symétries.html">Comprendre les symétries</a></li>
+    <li><a class="button" href="Transformations du plan/Comprendre les translations.html">Comprendre les translations</a></li>
+    <li><a class="button" href="Transformations du plan/Comprendre les rotations.html">Comprendre les rotations</a></li>
+    <li><a class="button" href="Transformations du plan/Comprendre les homothéties.html">Comprendre les homothéties</a></li>
     <div style="height: 50px;"></div>
     <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
