--- a/3e/Arithmétique.html
+++ b/3e/Arithmétique.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Arithmétique
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li><a class="button" href="Arithmétique/Décomposer un nombre en produits de facteurs premiers.html">Décomposer un nombre en produits de facteurs premiers</a></li>
     <li><a class="button" href="Arithmétique/Déterminer si un nombre est premier.html">Déterminer si un nombre est premier</a></li>
     <li><a class="button" href="Arithmétique/Simplifier une fraction pour la rendre irréductible.html">Simplifier une fraction pour la rendre irréductible</a></li>
