--- a/3e/Calcul littéral.html
+++ b/3e/Calcul littéral.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Calcul littéral
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li><a class="button" href="Calcul littéral/Calculer la valeur d'une expression littérale.html">Calculer la valeur d'une expression littérale</a></li>
     <li><a class="button" href="Calcul littéral/Développer une expression littérale.html">Développer une expression littérale</a></li>
     <li><a class="button" href="Calcul littéral/Factoriser une expression littérale.html">Factoriser une expression littérale</a></li>
