--- a/3e/Equations.html
+++ b/3e/Equations.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Equations
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li><a class="button"  href="Equations/Résoudre une équation simple (de type ax=b).html">Résoudre une équation simple (de type ax=b)</a></li>
     <li><a class="button"  href="Equations/Résoudre une équation (de type ax+b=c).html">Equations/Résoudre une équation (de type ax+b=c)</a></li>
     <li><a class="button"  href="Equations/Résoudre une équation (de type ax+b=cx+d).html">Equations/Résoudre une équation (de type ax+b=cx+d)</a></li>
