--- a/3e/Notion de fonction.html
+++ b/3e/Notion de fonction.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Notion de fonction
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li><a class="button" href="Notion de fonction/Déterminer l'image d'un nombre.html">Déterminer l'image d'un nombre</a></li>
     <li><a class="button" href="Notion de fonction/Déterminer l'antécédent d'un nombre.html">Déterminer l'antécédent d'un nombre</a></li>
     <div style="height: 50px;"></div>
