--- a/3e/Statistiques.html
+++ b/3e/Statistiques.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Statistiques
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li></li>
     <li></li>
     <li></li>
