--- a/3e/Théorème de Thalès.html
+++ b/3e/Théorème de Thalès.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Théorème de Thalès
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li><a class="button" href="Théorème de Thalès/Utiliser le théorème de Thalès.html">Utiliser le théorème de Thalès</a></li>
     <li><a class="button" href="Théorème de Thalès/Utiliser la réciproque du théorème de Thalès.html">Utiliser la réciproque du théorème de Thalès</a></li>
     <div style="height: 50px;"></div>
