--- a/3e/Transformations du plan.html
+++ b/3e/Transformations du plan.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Tranformations du plan
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li><a class="button" href="Transformations du plan/Identifier les tranformations du plan.html">Identifier les tranformations du plan</a></li>
     <li><a class="button" href="Transformations du plan/Comprendre les symétries.html">Comprendre les symétries</a></li>
     <li><a class="button" href="Transformations du plan/Comprendre les translations.html">Comprendre les translations</a></li>
