--- a/4e/Fractions.html
+++ b/4e/Fractions.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Fractions
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li><a class="button" href="Fractions/Simplifier une  fraction.html">Simplifier une  fraction</a></li>
     <li><a class="button" href="Fractions/Additionner et soustraire des fractions.html">Additionner et soustraire des fractions</a></li>
     <li><a class="button" href="Fractions/Multiplier et diviser des fractions.html">Multiplier et diviser des fractions</a></li>
