--- a/4e/Nombres relatifs.html
+++ b/4e/Nombres relatifs.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Nombres relatifs
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li><a class="button" href="Nombres relatifs/Additionner et soustraire des nombres relatifs.html">Additionner et soustraire des nombres relatifs</a></li>
     <li><a class="button" href="Nombres relatifs/Multiplier et diviser des nombres relatifs.html">Multiplier et diviser des nombres relatifs</a></li>
     <div style="height: 50px;"></div>
