--- a/4e/Proportionnalité.html
+++ b/4e/Proportionnalité.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Proportionnalité
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li><a class="button" href="Proportionnalité/Calculer une quatrième proportionnelle.html">Calculer une quatrième proportionnelle</a></li>
     <li><a class="button" href="Proportionnalité/Identifier une situation de proportionnalité.html">Identifier une situation de proportionnalité</a></li>
     <div style="height: 50px;"></div>
