--- a/4e/Proportionnalité/Calculer une quatrième proportionnelle.html
+++ b/4e/Proportionnalité/Calculer une quatrième proportionnelle.html
@@ -43,7 +43,7 @@
     <p>
         Consigne : Compléter le tableau de proportionnalité
     </p>
-    <table>
+    <table style=" border-collapse: collapse;">
         <tbody>
             <tr>
                 <td style="text-align: center; border-color: white; border-style: solid;">
