--- a/4e/Théorème de Pythagore.html
+++ b/4e/Théorème de Pythagore.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Théorème de Pythagore
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li>Utiliser le théorème de Pythagore</li>
     <li>Utiliser la réciproque du théorème de Pythagore</li>
     <div style="height: 50px;"></div>
