--- a/4e/Pyramide et cône.html
+++ b/4e/Pyramide et cône.html
@@ -10,7 +10,7 @@
     <h1><b><u>
         Pyramide et cône
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li>Reconnaître des solides</li>
     <li>Représenter différents solides</li>
     <li>Calculer des volumes</li>
