--- a/4e/Transformations du plan.html
+++ b/4e/Transformations du plan.html
@@ -5,16 +5,16 @@
     <body>
     <div style="height: 50px;"></div>
     <p class="soustitre">
-        Niveau 3ème :
+        Niveau 4ème :
     </p>
     <h1><b><u>
         Tranformations du plan
     </h1></b></u>
-    <ul>Sélectionner la compétences à travailler</ul>
+    <ul>Sélectionner la compétence à travailler</ul>
     <li><a class="button" href="Transformations du plan/Identifier les tranformations du plan.html">Identifier les tranformations du plan</a></li>
-    <li>Comprendre les symétries</li>
-    <li>Comprendre les translations</li>
-    <li>Comprendre les rotations</li>
+    <li><a class="button" href="Transformations du plan/Comprendre les symétries.html">Comprendre les symétries</a></li>
+    <li><a class="button" href="Transformations du plan/Comprendre les translations.html">Comprendre les translations</a></li>
+    <li><a class="button" href="Transformations du plan/Comprendre les rotations.html">Comprendre les rotations</a></li>
     <div style="height: 50px;"></div>
     <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
