--- a/4e/Théorème de Pythagore.html
+++ b/4e/Théorème de Pythagore.html
@@ -11,8 +11,8 @@
         Théorème de Pythagore
     </h1></b></u>
     <ul>Sélectionner la compétence à travailler</ul>
-    <li>Utiliser le théorème de Pythagore</li>
-    <li>Utiliser la réciproque du théorème de Pythagore</li>
+    <li><a class="button" href="Théorème de Pythagore/Utiliser le théorème de Pythagore.html">Utiliser le théorème de Pythagore</a></li>
+    <li><a class="button" href="Théorème de Pythagore/Utiliser la réciproque du théorème de Pythagore.html">Utiliser la réciproque du théorème de Pythagore</a></li>
     <div style="height: 50px;"></div>
     <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
