--- a/3e/Statistiques.html
+++ b/3e/Statistiques.html
@@ -11,11 +11,10 @@
         Statistiques
     </h1></b></u>
     <ul>Sélectionner la compétence à travailler</ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><a class="button" href="Statistiques/Calculer une Moyenne.html">Calculer une Moyenne</a></li>
+    <li><a class="button" href="Statistiques/Calculer une Moyenne Pondérée.html">Calculer une Moyenne Pondérée</a></li>
+    <li><a class="button" href="Statistiques/Calculer une Médiane.html">Calculer une Médiane</a></li>
+    <li><a class="button" href="Statistiques/Calculer une Etendue.html">Calculer une Etendue</a></li>
     <div style="height: 50px;"></div>
     <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
