--- a/4e/Théorème de Pythagore/Utiliser le théorème de Pythagore.html
+++ b/4e/Théorème de Pythagore/Utiliser le théorème de Pythagore.html
@@ -105,7 +105,7 @@
         Utiliser le théorème de Pythagore
     </h1></b></u>
     <p>
-        Consigne : Compléter la rédaction du théorème de Pythagore ci-dessous. Attention, les points doivent être en majuscules.
+        Consigne : Compléter la rédaction du théorème de Pythagore ci-dessous en arrondissant les résultats au dixième si nécessaire. ATTENTION : Les points doivent être en majuscules.
     </p>
     <p>
         <canvas id="myCanvas" width="300" height="170" style="color: white;stroke: white;">
