Pyramide et Cône

--- a/4e/Pyramide et cône.html
+++ b/4e/Pyramide et cône.html
@@ -11,9 +11,7 @@
         Pyramide et cône
     </h1></b></u>
     <ul>Sélectionner la compétence à travailler</ul>
-    <li>Reconnaître des solides</li>
-    <li>Représenter différents solides</li>
-    <li>Calculer des volumes</li>
+    <li><a class="button" href="Pyramide et cône/Calculer des volumes.html">Calculer des volumes</a></li>
     <div style="height: 50px;"></div>
     <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
